@@ -40,6 +40,7 @@ svn=net.sourceforge.cruisecontrol.sourcecontrols.SVN
 timebuild=net.sourceforge.cruisecontrol.sourcecontrols.TimeBuild
 triggers=net.sourceforge.cruisecontrol.sourcecontrols.Triggers
 targets=net.sourceforge.cruisecontrol.sourcecontrols.Targets
+ucm=net.sourceforge.cruisecontrol.sourcecontrols.UCM
 vss=net.sourceforge.cruisecontrol.sourcecontrols.Vss
 vssjournal=net.sourceforge.cruisecontrol.sourcecontrols.VssJournal
 
@@ -57,6 +58,7 @@ labelincrementer=net.sourceforge.cruisecontrol.labelincrementers.DefaultLabelInc
 # publishers
 antpublisher=net.sourceforge.cruisecontrol.publishers.AntPublisher
 artifactspublisher=net.sourceforge.cruisecontrol.publishers.ArtifactsPublisher
+clearcasebaselinepublisher=net.sourceforge.cruisecontrol.publishers.ClearCaseBaselinePublisher
 cmsynergybaselinepublisher=net.sourceforge.cruisecontrol.publishers.CMSynergyBaselinePublisher
 cmsynergytaskpublisher=net.sourceforge.cruisecontrol.publishers.CMSynergyTaskPublisher
 currentbuildstatuspublisher=net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusPublisher
